# AutoRobot

./: .gitattributes  README.md
robot/: ActivityDemo.py  EmotionDetector.py  FaceEmotionDetector.py  FacialDetector.py  RobotResponse.py  SpeakListen.py  SpeechEmotionResponses.py  main_function.py  package.xml  requirements.txt  speech_robot.py  test.py  vision.py  vision_robot.py
robot/KIV/: emotion_voice_engine.py  test.py  test_auc_0.89.keras
robot/KIV/a/: say_hello_ans.launch (1).txt  say_hello_ans.py
robot/launch/: robotEmotion.launch
robot/scripts/: ActivityDemo.py  EmotionDetector.py  FacialDetector.py  RobotResponse.py  SpeakListen.py  speech_robot.py  vision.py  vision_robot.py
vision/: demo.py  face_detection_yunet_2023mar_int8bq.onnx  final.py  saved_model.pb  test.py
vision/A/: model_architecture.json  model_model.h5  mtccn.py  vision_model.ipynb  vision_model_notebook.ipynb
vision/A/B/: model.h5  vision.py  vision_model.py
